--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -5,10 +5,24 @@
     <title>Quizz Rétro Gaming</title>
     <style>
         body {
-            font-family: 'Courier', monospace;
-            background-color: #f0f0f0;
+            font-family: 'Press Start 2P', cursive;
+            background-color: #000;
+            color: #00FF00;
             text-align: center;
             padding: 50px;
+            font-size: 16px;
+        }
+        .crt {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.05) 1%, transparent 100%);
+            background-repeat: repeat-x;
+            background-size: 100% 3px;
+            z-index: 2;
         }
         .question {
             font-size: 24px;
@@ -16,11 +30,15 @@
         }
         .choices button {
             display: block;
-            width: 200px;
+            width: 80%;
             margin: 10px auto;
             padding: 10px;
             font-size: 18px;
             cursor: pointer;
+            background-color: #000;
+            color: #00FF00;
+            border: 2px solid #00FF00;
+            border-radius: 5px;
         }
         .result {
             font-size: 20px;
@@ -74,6 +92,7 @@
     </script>
 </head>
 <body>
+    <div class="crt"></div>
     <h1>Quizz Rétro Gaming</h1>
     <label for="level">Choisissez un niveau :</label>
     <select id="level">
