--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -50,7 +50,7 @@
             background-color: #00FF00;
             margin: 0 auto 20px;
             border-radius: 50%;
-            background-image: url('ia_avatar.png'); /* Assurez-vous d'avoir cette image dans votre dossier */
+            background-image: url('IA avatar.png'); /* Assurez-vous d'avoir cette image dans votre dossier */
             background-size: cover;
         }
     </style>
