--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -50,28 +50,50 @@
             background-color: #00FF00;
             margin: 0 auto 20px;
             border-radius: 50%;
-            background-image: url('IA avatar.png'); /* Assurez-vous d'avoir cette image dans votre dossier */
+            background-image: url('ia_avatar.png');
             background-size: cover;
         }
     </style>
     <script>
         let questions = {
-            "Facile": [
-                {"question": "Quel est le personnage principal de Super Mario?", "choices": ["Luigi", "Mario", "Peach"], "answer": 1},
-                {"question": "En quelle année le jeu Pac-Man est-il sorti?", "choices": ["1980", "1985", "1990"], "answer": 0}
-            ],
-            "Moyen": [
-                {"question": "Sur quelle console est sorti le jeu Sonic the Hedgehog?", "choices": ["NES", "SNES", "Sega Genesis"], "answer": 2},
-                {"question": "Combien de lignes faut-il effacer pour faire un Tetris?", "choices": ["2", "3", "4"], "answer": 2}
-            ],
-            "Difficile": [
-                {"question": "Quel est le boss final du jeu 'The Legend of Zelda: Ocarina of Time'?", "choices": ["Ganon", "Ganondorf", "Zant"], "answer": 1},
-                {"question": "Dans quel jeu apparaît le personnage de 'M. Bison'?", "choices": ["Street Fighter", "Mortal Kombat", "Tekken"], "answer": 0}
-            ]
+            "fr": {
+                "Facile": [
+                    {"question": "Quel est le personnage principal de Super Mario?", "choices": ["Luigi", "Mario", "Peach"], "answer": 1},
+                    {"question": "En quelle année le jeu Pac-Man est-il sorti?", "choices": ["1980", "1985", "1990"], "answer": 0}
+                ],
+                "Moyen": [
+                    {"question": "Sur quelle console est sorti le jeu Sonic the Hedgehog?", "choices": ["NES", "SNES", "Sega Genesis"], "answer": 2},
+                    {"question": "Combien de lignes faut-il effacer pour faire un Tetris?", "choices": ["2", "3", "4"], "answer": 2}
+                ],
+                "Difficile": [
+                    {"question": "Quel est le boss final du jeu 'The Legend of Zelda: Ocarina of Time'?", "choices": ["Ganon", "Ganondorf", "Zant"], "answer": 1},
+                    {"question": "Dans quel jeu apparaît le personnage de 'M. Bison'?", "choices": ["Street Fighter", "Mortal Kombat", "Tekken"], "answer": 0}
+                ]
+            },
+            "en": {
+                "Easy": [
+                    {"question": "Who is the main character of Super Mario?", "choices": ["Luigi", "Mario", "Peach"], "answer": 1},
+                    {"question": "In which year was the game Pac-Man released?", "choices": ["1980", "1985", "1990"], "answer": 0}
+                ],
+                "Medium": [
+                    {"question": "On which console was Sonic the Hedgehog released?", "choices": ["NES", "SNES", "Sega Genesis"], "answer": 2},
+                    {"question": "How many lines do you need to clear to make a Tetris?", "choices": ["2", "3", "4"], "answer": 2}
+                ],
+                "Hard": [
+                    {"question": "Who is the final boss in 'The Legend of Zelda: Ocarina of Time'?", "choices": ["Ganon", "Ganondorf", "Zant"], "answer": 1},
+                    {"question": "In which game does the character 'M. Bison' appear?", "choices": ["Street Fighter", "Mortal Kombat", "Tekken"], "answer": 0}
+                ]
+            }
         };
 
+        function detectLanguage() {
+            const userLang = navigator.language || navigator.userLanguage;
+            return userLang.includes('fr') ? 'fr' : 'en';
+        }
+
         function showQuestion(level) {
-            let question = questions[level][Math.floor(Math.random() * questions[level].length)];
+            let lang = detectLanguage();
+            let question = questions[lang][level][Math.floor(Math.random() * questions[lang][level].length)];
             document.getElementById('question').innerText = question.question;
             document.getElementById('choices').innerHTML = '';
             question.choices.forEach((choice, index) => {
@@ -85,9 +107,9 @@
         function checkAnswer(selected, correct, level) {
             let result = document.getElementById('result');
             if (selected === correct) {
-                result.innerText = 'Correct!';
+                result.innerText = detectLanguage() === 'fr' ? 'Correct!' : 'Correct!';
             } else {
-                result.innerText = 'Incorrect!';
+                result.innerText = detectLanguage() === 'fr' ? 'Incorrect!' : 'Incorrect!';
             }
             setTimeout(() => showQuestion(level), 2000);
         }
@@ -103,7 +125,7 @@
 <body>
     <div class="crt"></div>
     <h1>Quizz Rétro Gaming</h1>
-    <div class="avatar"></div> <!-- Avatar IA -->
+    <div class="avatar"></div>
     <label for="level">Choisissez un niveau :</label>
     <select id="level">
         <option value="Facile">Facile</option>
