--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -56,7 +56,7 @@
             background-color: #00FF00;
             margin: 20px auto;
             border-radius: 50%;
-            background-image: url('ia_avatar.png');
+            background-image: url('IA avatar.png');
             background-size: cover;
         }
         .game-container {
