--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -67,7 +67,7 @@
         }
     </style>
     <script>
-        let questions = {
+        const questions = {
             "fr": {
                 "Facile": [
                     {"question": "Quel est le personnage principal de Super Mario?", "choices": ["Luigi", "Mario", "Peach"], "answer": 1},
@@ -112,12 +112,12 @@
         }
 
         function showQuestion(level) {
-            let lang = detectLanguage();
-            let question = questions[lang][level][Math.floor(Math.random() * questions[lang][level].length)];
+            const lang = detectLanguage();
+            const question = questions[lang][level][Math.floor(Math.random() * questions[lang][level].length)];
             document.getElementById('question').innerText = question.question;
             document.getElementById('choices').innerHTML = '';
             question.choices.forEach((choice, index) => {
-                let button = document.createElement('button');
+                const button = document.createElement('button');
                 button.innerText = choice;
                 button.onclick = () => checkAnswer(index, question.answer, level);
                 document.getElementById('choices').appendChild(button);
@@ -125,19 +125,15 @@
         }
 
         function checkAnswer(selected, correct, level) {
-            let result = document.getElementById('result');
-            if (selected === correct) {
-                result.innerText = detectLanguage() === 'fr' ? 'Correct!' : 'Correct!';
-            } else {
-                result.innerText = detectLanguage() === 'fr' ? 'Incorrect!' : 'Incorrect!';
-            }
+            const result = document.getElementById('result');
+            result.innerText = (selected === correct) ? 'Correct!' : 'Incorrect!';
             setTimeout(() => showQuestion(level), 2000);
         }
 
         window.onload = function() {
             showIntro();
             document.getElementById('start').onclick = function() {
-                let level = document.getElementById('level').value;
+                const level = document.getElementById('level').value;
                 showQuestion(level);
             };
         };
