--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -8,9 +8,12 @@
         body {
             font-family: 'Press Start 2P', cursive;
             background-color: #000;
+            background-image: url('background.png'); /* Image de fond rétro */
             color: #00FF00;
             text-align: center;
             padding: 50px;
+            background-size: cover;
+            overflow: hidden; /* Pour éviter le défilement */
         }
         .crt {
             position: absolute;
@@ -26,13 +29,26 @@
         }
         .intro, .game-container {
             display: none;
+            border: 5px solid #00FF00;
+            padding: 20px;
+            margin-top: 20px;
+            background-color: rgba(0, 0, 0, 0.7); /* Arrière-plan semi-transparent */
         }
         .show {
             display: block !important;
         }
         .question {
             font-size: 24px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+        }
+        .avatar {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 20px;
+            border-radius: 50%;
+            background-image: url('IA avatar.png');
+            background-size: cover;
+            border: 2px solid #00FF00; /* Bordure pour l'avatar */
         }
         .choices button {
             display: block;
@@ -45,24 +61,15 @@
             color: #00FF00;
             border: 2px solid #00FF00;
             border-radius: 5px;
+            transition: transform 0.1s, background-color 0.2s;
+        }
+        .choices button:hover {
+            transform: scale(1.1); /* Effet de survol */
+            background-color: #00FF00; /* Change la couleur au survol */
+            color: #000; /* Change le texte au survol */
         }
         .result {
             font-size: 20px;
-            margin-top: 20px;
-        }
-        .avatar {
-            width: 100px;
-            height: 100px;
-            background-color: #00FF00;
-            margin: 0 auto 20px;
-            border-radius: 50%;
-            background-image: url('ia_avatar.png');
-            background-size: cover;
-        }
-        .game-container {
-            display: inline-block;
-            border: 5px solid #00FF00;
-            padding: 20px;
             margin-top: 20px;
         }
     </style>
@@ -81,22 +88,12 @@
                     {"question": "Quel est le boss final du jeu 'The Legend of Zelda: Ocarina of Time'?", "choices": ["Ganon", "Ganondorf", "Zant"], "answer": 1},
                     {"question": "Dans quel jeu apparaît le personnage de 'M. Bison'?", "choices": ["Street Fighter", "Mortal Kombat", "Tekken"], "answer": 0}
                 ]
-            },
-            "en": {
-                "Easy": [
-                    {"question": "Who is the main character of Super Mario?", "choices": ["Luigi", "Mario", "Peach"], "answer": 1},
-                    {"question": "In which year was the game Pac-Man released?", "choices": ["1980", "1985", "1990"], "answer": 0}
-                ],
-                "Medium": [
-                    {"question": "On which console was Sonic the Hedgehog released?", "choices": ["NES", "SNES", "Sega Genesis"], "answer": 2},
-                    {"question": "How many lines do you need to clear to make a Tetris?", "choices": ["2", "3", "4"], "answer": 2}
-                ],
-                "Hard": [
-                    {"question": "Who is the final boss in 'The Legend of Zelda: Ocarina of Time'?", "choices": ["Ganon", "Ganondorf", "Zant"], "answer": 1},
-                    {"question": "In which game does the character 'M. Bison' appear?", "choices": ["Street Fighter", "Mortal Kombat", "Tekken"], "answer": 0}
-                ]
             }
         };
+
+        const correctSound = new Audio('correct.mp3'); // Son pour réponse correcte
+        const incorrectSound = new Audio('incorrect.mp3'); // Son pour réponse incorrecte
+        const introSound = new Audio('intro.mp3'); // Son pour l'intro
 
         function detectLanguage() {
             const userLang = navigator.language || navigator.userLanguage;
@@ -104,6 +101,7 @@
         }
 
         function showIntro() {
+            introSound.play(); // Joue le son d'intro
             document.querySelector('.intro').classList.add('show');
             setTimeout(() => {
                 document.querySelector('.intro').classList.remove('show');
@@ -126,7 +124,13 @@
 
         function checkAnswer(selected, correct, level) {
             const result = document.getElementById('result');
-            result.innerText = (selected === correct) ? 'Correct!' : 'Incorrect!';
+            if (selected === correct) {
+                correctSound.play();
+                result.innerText = 'Correct!';
+            } else {
+                incorrectSound.play();
+                result.innerText = 'Incorrect!';
+            }
             setTimeout(() => showQuestion(level), 2000);
         }
 
@@ -146,6 +150,7 @@
         <p>Studio Jahmora Production</p>
     </div>
     <div class="game-container">
+        <div class="avatar"></div> <!-- Avatar de l'IA -->
         <label for="level">Choisissez un niveau :</label>
         <select id="level">
             <option value="Facile">Facile</option>
