--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -4,101 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizz Rétro Gaming</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-        body {
-            font-family: 'Press Start 2P', cursive;
-            background-color: #000;
-            background-image: url('background.png'); /* Image de fond rétro */
-            color: #00FF00;
-            text-align: center;
-            padding: 50px;
-            background-size: cover;
-            overflow: hidden;
-        }
-
-        .crt {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.05) 1%, transparent 100%);
-            background-repeat: repeat-x;
-            background-size: 100% 3px;
-            z-index: 2;
-        }
-
-        .intro, .game-container {
-            display: none;
-            border: 5px solid #00FF00;
-            padding: 20px;
-            margin-top: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-        }
-
-        .show {
-            display: block !important;
-        }
-
-        .question {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        .avatar {
-            width: 100px;
-            height: 100px;
-            margin: 0 auto 20px;
-            border-radius: 50%;
-            background-image: url('IA avatar.png');
-            background-size: cover;
-            border: 2px solid #00FF00;
-        }
-
-        .choices button {
-            display: block;
-            width: 80%;
-            margin: 20px auto;
-            padding: 15px;
-            font-size: 18px;
-            cursor: pointer;
-            background-color: #000;
-            color: #00FF00;
-            border: 2px solid #00FF00;
-            border-radius: 5px;
-            transition: transform 0.1s, background-color 0.2s;
-        }
-
-        .choices button:hover {
-            transform: scale(1.1);
-            background-color: #00FF00;
-            color: #000;
-        }
-
-        .result {
-            font-size: 20px;
-            margin-top: 20px;
-        }
-
-        /* Responsiveness */
-        @media (max-width: 768px) {
-            body {
-                padding: 20px;
-            }
-            .choices button {
-                font-size: 16px;
-                padding: 10px;
-            }
-            .question {
-                font-size: 20px;
-            }
-        }
-    </style>
-    
-    <!-- Import des fichiers JavaScript -->
+    <link rel="stylesheet" href="styles.css">
     <script src="questions.js"></script>
     <script src="main.js" defer></script>
 </head>
@@ -122,6 +28,13 @@
         <div class="question" id="question"></div>
         <div class="choices" id="choices"></div>
         <div class="result" id="result"></div>
+        <div class="score" id="score">Score: 0</div>
+    </div>
+    
+    <div class="end-screen" id="end-screen">
+        <h2>Fin du Quiz!</h2>
+        <p id="final-score"></p>
+        <button id="restart">Rejouer</button>
     </div>
 </body>
 </html>
