--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizz Rétro Gaming</title>
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
-    
-    <!-- Import des fichiers JavaScript -->
     <script src="questions.js"></script>
     <script src="main.js" defer></script>
 </head>
@@ -32,7 +30,7 @@
         <div class="question" id="question"></div>
         <div class="choices" id="choices"></div>
         <div class="result" id="result"></div>
-        <div id="score">Score: 0</div> <!-- Affichage du score -->
+        <div class="score" id="score">Score: 0</div> <!-- Zone pour afficher le score -->
     </div>
 </body>
 </html>
