--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -13,8 +13,10 @@
     
     <div class="intro">
         <img src="intro_image.png" alt="Intro" style="width: 100%; max-width: 600px;">
-        <h1>Quizz Rétro Gaming</h1>
-        <p>Testez vos connaissances sur les jeux vidéo classiques !</p>
+        <div class="intro-text">
+            <h1>Quizz Rétro Gaming</h1>
+            <p>Testez vos connaissances sur les jeux vidéo classiques !</p>
+        </div>
     </div>
     
     <div class="game-container">
