--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -3,34 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizz Rétro Gaming</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Lien vers le fichier CSS -->
-    <script src="questions.js"></script>
-    <script src="main.js" defer></script>
+    <title>Jeu de Quiz</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMv+I0cJER0XkVnlkP7skG6eXmeXcAwG2M89zD" crossorigin="anonymous">
 </head>
 <body>
-    <div class="crt"></div>
-    
-    <div class="intro">
-        <img src="intro_image.png" alt="Intro" style="width: 100%; max-width: 600px;">
-        <p>Studio Jahmora Production</p>
-    </div>
-    
-    <div class="game-container">
-        <div class="avatar"></div>
-        <div id="start-container"> <!-- Conteneur pour le label, le select, et le bouton -->
-            <label for="level">Choisissez un niveau :</label>
-            <select id="level">
-                <option value="Facile">Facile</option>
-                <option value="Moyen">Moyen</option>
-                <option value="Difficile">Difficile</option>
-            </select>
-            <button id="start">Commencer</button>
+    <header class="intro show">
+        <img src="intro_image.png" alt="Image d'introduction" loading="lazy" style="width: 100%; max-width: 600px;">
+        <p class="intro-title">Studio Jahmora Production 🎮</p>
+        <audio id="intro-music" src="intro_music.mp3" autoplay loop></audio>
+    </header>
+
+    <main id="start-container" class="hidden">
+        <h1>Bienvenue au Quiz de Jeux Vidéo</h1>
+        <img src="https://example.com/start_image.png" alt="Image de démarrage" class="start-image">
+        <label for="level">Choisissez un niveau:</label>
+        <select id="level" aria-label="Sélectionnez le niveau de difficulté">
+            <option value="Facile">Facile 🟢</option>
+            <option value="Moyen">Moyen 🟡</option>
+            <option value="Difficile">Difficile 🔴</option>
+        </select>
+        <button id="start" class="button" type="button"><i class="fas fa-play"></i> Commencer 🚀</button>
+        <div class="score-bar">
+            <div class="score-fill" style="width: 0%;"></div>
         </div>
-        <div class="question" id="question"></div>
-        <div class="choices" id="choices"></div>
-        <div class="result" id="result"></div>
-        <div class="score" id="score">Score: 0</div> <!-- Zone pour afficher le score -->
+    </main>
+
+    <div class="game-container hidden"> 
+        <h2 id="question" class="question"></h2>
+        <div id="choices" class="choices"></div>
+        <div id="result" class="result"></div>
+        <div id="score">Score: 0</div>
     </div>
+
+    <footer class="end-screen hidden"> 
+        <h2>Fin du Jeu!</h2>
+        <p id="final-score"></p>
+        <button id="play-again" class="button" type="button">Rejouer</button>
+        <button id="menu" class="button" type="button">Retour au menu principal</button>
+    </footer>
+
+    <script src="questions.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
+
