--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de Quiz</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRkYDUgNu17H9GR+h9jjXx/c0sv4FfdOB2DWwbC5P" crossorigin="anonymous">
 </head>
 <body>
     <header class="intro show">
@@ -16,13 +15,13 @@
     </header>
 
     <main id="start-container" class="hidden">
-        <h1></h1>
+        <h1>Bienvenue au Quiz de Jeux Vidéo</h1>
         <img src="https://example.com/start_image.png" alt="Image de démarrage" class="start-image">
-        <label for="level"></label>
+        <label for="level">Choisissez un niveau:</label>
         <select id="level" aria-label="Sélectionnez le niveau de difficulté">
-            <option value="Facile"></option>
-            <option value="Moyen"></option>
-            <option value="Difficile"></option>
+            <option value="Facile">Facile 🟢</option>
+            <option value="Moyen">Moyen 🟡</option>
+            <option value="Difficile">Difficile 🔴</option>
         </select>
         <button id="start" class="button" type="button"><i class="fas fa-play"></i> Commencer 🚀</button>
         <div class="score-bar">
@@ -30,20 +29,21 @@
         </div>
     </main>
 
-    <div class="game-container hidden">
+    <div class="game-container hidden"> 
         <h2 id="question" class="question"></h2>
         <div id="choices" class="choices"></div>
         <div id="result" class="result"></div>
-        <div id="score"></div>
+        <div id="score">Score: 0</div>
     </div>
 
-    <footer class="end-screen hidden">
-        <h2></h2>
+    <footer class="end-screen hidden"> 
+        <h2>Fin du Jeu!</h2>
         <p id="final-score"></p>
-        <button id="play-again" class="button" type="button"></button>
-        <button id="menu" class="button" type="button"></button>
+        <button id="play-again" class="button" type="button">Rejouer</button>
+        <button id="menu" class="button" type="button">Retour au menu principal</button>
     </footer>
 
+    <!-- Inclusion des fichiers JavaScript -->
     <script src="translation.js"></script>
     <script src="questions.js"></script>
     <script src="main.js"></script>
