--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeu de Quiz</title>
+    <title>Jeu de Quiz de Jeux Vidéo</title> <!-- Updated title for clarity -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRkYDUgNu17H9GR+h9jjXx/c0sv4FfdOB2DWwbC5P" crossorigin="anonymous">
 </head>
 <body>
-    <header class="intro show">
+    <header class="intro show" aria-label="Écran d'introduction">
         <img src="intro_image.png" alt="Image d'introduction" loading="lazy" style="width: 100%; max-width: 600px;">
         <p class="intro-title">Studio Jahmora Production 🎮</p>
-        <audio id="intro-music" src="intro_music.mp3" autoplay loop></audio>
+        <audio id="intro-music" src="intro_music.mp3" autoplay loop controls></audio> <!-- Added controls for user experience -->
     </header>
 
-    <main id="start-container" class="hidden">
-        <h1>Bienvenue au Quiz de Jeux Vidéo</h1>
-        <img src="https://example.com/start_image.png" alt="Image de démarrage" class="start-image">
+    <main id="start-container" class="hidden" aria-labelledby="welcome-heading">
+        <h1 id="welcome-heading">Bienvenue au Quiz de Jeux Vidéo</h1>
+        <img src="https://example.com/start_image.png" alt="Image de démarrage" class="start-image" loading="lazy">
         <label for="level">Choisissez un niveau:</label>
         <select id="level" aria-label="Sélectionnez le niveau de difficulté">
             <option value="Facile">Facile 🟢</option>
@@ -44,7 +44,7 @@
     </footer>
 
     <!-- Inclusion des fichiers JavaScript -->
-    <script src="translation.js"></script>
+    <script src="translations.js"></script>
     <script src="questions.js"></script>
     <script src="main.js"></script>
 </body>
