--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -45,7 +45,7 @@
     </footer>
 
     <!-- Inclusion des fichiers JavaScript -->
-    <script src="translation.js"></script>
+    <script src="translations.js"></script>
     <script src="questions.js"></script>
     <script src="main.js"></script>
 </body>
