--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -44,8 +44,13 @@
         <button id="menu" class="button" type="button">Retour au menu principal</button>
     </footer>
 
+    <!-- Écran de chargement -->
+    <div id="loading-screen" class="loading hidden">
+        <p>Chargement...</p>
+    </div>
+
     <!-- Inclusion des fichiers JavaScript -->
-    <script src="translations.js"></script>
+    <script src="translation.js"></script>
     <script src="questions.js"></script>
     <script src="main.js"></script>
 </body>
