--- a/retro_quiz.html
+++ b/retro_quiz.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Inclusion des fichiers JavaScript -->
-    <script src="translation.js"></script>
+    <script src="translations.js"></script>
     <script src="questions.js"></script>
     <script src="main.js"></script>
 </body>
